Cleanup + Optimizations