@@ -1,39 +1,37 @@
 package com.fileprocessing.model;
 
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
 
 /**
  * Represents a file to be processed in the file processing microservice.
- * Immutable and validated to prevent accidental mutation or invalid state.
- *
- * @param content Immutable copy returned
+ * Immutable, validated, and thread-safe.
  */
-public record FileModel(String fileId, String fileName, byte[] content, String fileType, long sizeBytes) {
+public record FileModel(
+        String fileId,
+        String fileName,
+        byte[] content,
+        String fileType,
+        long sizeBytes
+) {
 
-    private static final Set<String> IMAGE_TYPES = new HashSet<>(Arrays.asList("jpg", "jpeg", "png", "gif"));
+    private static final Set<String> IMAGE_TYPES = Set.of("jpg", "jpeg", "png", "gif");
 
     /**
      * Constructor with validation
      */
-    public FileModel(String fileId, String fileName, byte[] content, String fileType, long sizeBytes) {
-        this.fileId = Objects.requireNonNull(fileId, "fileId cannot be null");
-        this.fileName = Objects.requireNonNull(fileName, "fileName cannot be null");
-        this.content = (content != null) ? Arrays.copyOf(content, content.length) : new byte[0];
-        this.fileType = Objects.requireNonNull(fileType, "fileType cannot be null").toLowerCase();
+    public FileModel {
+        Objects.requireNonNull(fileId, "fileId cannot be null");
+        Objects.requireNonNull(fileName, "fileName cannot be null");
+        Objects.requireNonNull(fileType, "fileType cannot be null");
+
+        fileType = fileType.toLowerCase();
+        content = (content != null) ? Arrays.copyOf(content, content.length) : new byte[0];
+
         if (sizeBytes < 0) {
             throw new IllegalArgumentException("sizeBytes cannot be negative");
         }
-        this.sizeBytes = sizeBytes;
-    }
-
-    /**
-     * Builder for easier construction
-     */
-    public static FileModelBuilder builder() {
-        return new FileModelBuilder();
     }
 
     /**
@@ -56,6 +54,13 @@ public record FileModel(String fileId, String fileName, byte[] content, String f
      */
     public boolean isPdf() {
         return "pdf".equalsIgnoreCase(fileType);
+    }
+
+    /**
+     * Builder for easier construction
+     */
+    public static FileModelBuilder builder() {
+        return new FileModelBuilder();
     }
 
     public static class FileModelBuilder {
